app use base64url for signature and pubpriv key